# Individual-work

./: Backpacks.txt  CMakeLists.txt  Doxyfile  README.md
doc/: Individual-work.docx
src/: Backpack.cpp  Backpack.h  Container.cpp  Container.h  Controller.cpp  Controller.h  Menu.cpp  Menu.h  main.cpp
test/: ControllerTest.cpp
